grammar.ebnf
module ::= (function | term)*
branch ::= "{" (condition term*)* "}"
loop ::= "[" condition? term* condition? "]"
function ::= name ":" "{" term* "}"
term ::= branch | loop | name | string | number
condition ::= "(" term+ ")"
name ::= (letter | symbol) (letter | digit | symbol)*
string ::= '"' char* '"'
number ::= digit+
digit ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"
